--- a/src/App.css
+++ b/src/App.css
@@ -2,52 +2,10 @@ html,
 body,
 #root {
   font: 0.9rem sans-serif;
-  background: transparent;
-  color: #1e2432;
+  background: #1e2432;
+  color: #fff;
   height: 100%;
   margin: 0;
-}
-.title-bar {
-  position: fixed;
-  top: 0px;
-  width: 100%;
-  background-color: transparent;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
-}
-.title-bar-btn {
-  width: 45px;
-  height: 4.5vh;
-  user-select: none;
-}
-.title {
-  display: flex;
-  flex-grow: 1;
-  justify-content: center;
-  align-items: center;
-  user-select: none;
-  font-size: var(--font-size);
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-}
-.draggable {
-  -webkit-app-region: drag;
-}
-.icon {
-  width: 22px !important;
-}
-.max-icon {
-  width: 13px;
-}
-.control-bar {
-  display: flex;
-  align-items: center;
-  background-color: #1e2432 !important;
-}
-.control-btn:last-child:hover {
-  background-color: #ff3535;
 }
 .main-container {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418)),
@@ -55,7 +13,6 @@ body,
   background-size: cover;
   background-position: center;
 }
-
 .main-container {
   height: 100%;
   display: flex;
@@ -66,11 +23,15 @@ body,
 
 .search {
   outline: none;
-  padding: 20px 7%;
-  border-radius: 20px;
+  padding: 1em;
+  border-radius: 10px;
+  width: 100%;
+  max-width: 350px;
   border: none;
   margin-bottom: 5%;
-  background: rgba(250, 250, 250, 0.85);
+  background: #fafafad9;
+  font-size: 15px;
+  box-shadow: 10px 10px 5px 0px rgba(15, 15, 15, 0.404);
 }
 
 .city {
@@ -78,8 +39,10 @@ body,
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 40px 8%;
-  border-radius: 20px;
+  width: 100%;
+  max-width: 350px;
+  padding: 40px;
+  border-radius: 10px;
   background: rgba(250, 250, 250, 0.85);
   box-shadow: 10px 10px 5px 0px rgba(15, 15, 15, 0.404);
 }
